--- a/package.yaml
+++ b/package.yaml
@@ -1,6 +1,6 @@
-name:                hello-neighbors
+name:                hello-neighbor
 version:             0.1.0.0
-github:              "githubuser/hello-neighbors"
+github:              "githubuser/hello-neighbor"
 license:             BSD-3-Clause
 author:              "Author name here"
 maintainer:          "example@example.com"
@@ -17,7 +17,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/hello-neighbors#readme>
+description:         Please see the README on GitHub at <https://github.com/githubuser/hello-neighbor#readme>
 
 dependencies:
 - base >= 4.7 && < 5
@@ -37,7 +37,7 @@ library:
   source-dirs: src
 
 executables:
-  hello-neighbors-exe:
+  hello-neighbor-exe:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
@@ -45,10 +45,10 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - hello-neighbors
+    - hello-neighbor
 
 tests:
-  hello-neighbors-test:
+  hello-neighbor-test:
     main:                Spec.hs
     source-dirs:         test
     ghc-options:
@@ -56,4 +56,4 @@ tests:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - hello-neighbors
+    - hello-neighbor
