Do Laesa preprocessing

--- a/hello-neighbor.cabal
+++ b/hello-neighbor.cabal
@@ -1,6 +1,6 @@
 cabal-version: 2.2
 
--- This file has been generated from package.yaml by hpack version 0.36.0.
+-- This file has been generated from package.yaml by hpack version 0.35.1.
 --
 -- see: https://github.com/sol/hpack
 
@@ -25,29 +25,32 @@ source-repository head
 
 library
   exposed-modules:
+      Laesa
       Lib
   other-modules:
-      Paths_hello_neighbors
+      Paths_hello_neighbor
   autogen-modules:
-      Paths_hello_neighbors
+      Paths_hello_neighbor
   hs-source-dirs:
       src
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
-      base >=4.7 && <5
+      array ==0.5.4.0
+    , base >=4.7 && <5
   default-language: Haskell2010
 
 executable hello-neighbor-exe
   main-is: Main.hs
   other-modules:
-      Paths_hello_neighbors
+      Paths_hello_neighbor
   autogen-modules:
-      Paths_hello_neighbors
+      Paths_hello_neighbor
   hs-source-dirs:
       app
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      array ==0.5.4.0
+    , base >=4.7 && <5
     , hello-neighbor
   default-language: Haskell2010
 
@@ -55,13 +58,14 @@ test-suite hello-neighbor-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   other-modules:
-      Paths_hello_neighbors
+      Paths_hello_neighbor
   autogen-modules:
-      Paths_hello_neighbors
+      Paths_hello_neighbor
   hs-source-dirs:
       test
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.7 && <5
+      array ==0.5.4.0
+    , base >=4.7 && <5
     , hello-neighbor
   default-language: Haskell2010
