--- a/hello-neighbor.cabal
+++ b/hello-neighbor.cabal
@@ -25,6 +25,7 @@ source-repository head
 
 library
   exposed-modules:
+      DataLoader
       Laesa
       Lib
       MetricSpace
@@ -39,6 +40,8 @@ library
   build-depends:
       array ==0.5.4.0
     , base >=4.7 && <5
+    , binary ==0.8.9.1
+    , bytestring ==0.12.0.2
     , containers ==0.7
     , heap ==1.0.4
   default-language: Haskell2010
@@ -55,6 +58,8 @@ executable hello-neighbor-exe
   build-depends:
       array ==0.5.4.0
     , base >=4.7 && <5
+    , binary ==0.8.9.1
+    , bytestring ==0.12.0.2
     , containers ==0.7
     , heap ==1.0.4
     , hello-neighbor
@@ -73,6 +78,8 @@ test-suite hello-neighbor-test
   build-depends:
       array ==0.5.4.0
     , base >=4.7 && <5
+    , binary ==0.8.9.1
+    , bytestring ==0.12.0.2
     , containers ==0.7
     , heap ==1.0.4
     , hello-neighbor
