--- a/package.yaml
+++ b/package.yaml
@@ -23,8 +23,8 @@ dependencies:
 - base >= 4.7 && < 5
 - array == 0.5.4.0
 - heap == 1.0.4
-- containers == 0.7
-- bytestring == 0.12.0.2
+- containers >= 0.6
+- bytestring >= 0.11
 - binary == 0.8.9.1
 
 ghc-options:
