--- a/hello-neighbor.cabal
+++ b/hello-neighbor.cabal
@@ -41,8 +41,8 @@ library
       array ==0.5.4.0
     , base >=4.7 && <5
     , binary ==0.8.9.1
-    , bytestring ==0.12.0.2
-    , containers ==0.7
+    , bytestring >=0.11
+    , containers >=0.6
     , heap ==1.0.4
   default-language: Haskell2010
 
@@ -59,8 +59,8 @@ executable hello-neighbor-exe
       array ==0.5.4.0
     , base >=4.7 && <5
     , binary ==0.8.9.1
-    , bytestring ==0.12.0.2
-    , containers ==0.7
+    , bytestring >=0.11
+    , containers >=0.6
     , heap ==1.0.4
     , hello-neighbor
   default-language: Haskell2010
@@ -79,8 +79,8 @@ test-suite hello-neighbor-test
       array ==0.5.4.0
     , base >=4.7 && <5
     , binary ==0.8.9.1
-    , bytestring ==0.12.0.2
-    , containers ==0.7
+    , bytestring >=0.11
+    , containers >=0.6
     , heap ==1.0.4
     , hello-neighbor
   default-language: Haskell2010
