--- a/hello-neighbor.cabal
+++ b/hello-neighbor.cabal
@@ -44,6 +44,7 @@ library
     , bytestring >=0.11
     , containers >=0.6
     , heap ==1.0.4
+    , parallel ==3.2.2.0
   default-language: Haskell2010
 
 executable hello-neighbor-exe
@@ -63,6 +64,7 @@ executable hello-neighbor-exe
     , containers >=0.6
     , heap ==1.0.4
     , hello-neighbor
+    , parallel ==3.2.2.0
   default-language: Haskell2010
 
 test-suite hello-neighbor-test
@@ -83,4 +85,5 @@ test-suite hello-neighbor-test
     , containers >=0.6
     , heap ==1.0.4
     , hello-neighbor
+    , parallel ==3.2.2.0
   default-language: Haskell2010
