--- a/hello-neighbor.cabal
+++ b/hello-neighbor.cabal
@@ -47,12 +47,56 @@ library
     , parallel ==3.2.2.0
   default-language: Haskell2010
 
-executable hello-neighbor-exe
-  main-is: Main.hs
-  other-modules:
-      Paths_hello_neighbor
-  autogen-modules:
-      Paths_hello_neighbor
+executable mpar
+  main-is: MPar.hs
+  hs-source-dirs:
+      app
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      array ==0.5.4.0
+    , base >=4.7 && <5
+    , binary ==0.8.9.1
+    , bytestring >=0.11
+    , containers >=0.6
+    , heap ==1.0.4
+    , hello-neighbor
+    , parallel ==3.2.2.0
+  default-language: Haskell2010
+
+executable mseq
+  main-is: MSeq.hs
+  hs-source-dirs:
+      app
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      array ==0.5.4.0
+    , base >=4.7 && <5
+    , binary ==0.8.9.1
+    , bytestring >=0.11
+    , containers >=0.6
+    , heap ==1.0.4
+    , hello-neighbor
+    , parallel ==3.2.2.0
+  default-language: Haskell2010
+
+executable par
+  main-is: Par.hs
+  hs-source-dirs:
+      app
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
+  build-depends:
+      array ==0.5.4.0
+    , base >=4.7 && <5
+    , binary ==0.8.9.1
+    , bytestring >=0.11
+    , containers >=0.6
+    , heap ==1.0.4
+    , hello-neighbor
+    , parallel ==3.2.2.0
+  default-language: Haskell2010
+
+executable seq
+  main-is: Par.hs
   hs-source-dirs:
       app
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
