--- a/stack.yaml
+++ b/stack.yaml
@@ -20,6 +20,8 @@
 resolver:
   url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/21/22.yaml
 
+nix:
+  enable: false
 # User packages to be built.
 # Various formats can be used as shown in the example below.
 #
