--- a/package.yaml
+++ b/package.yaml
@@ -46,7 +46,7 @@ _exe-defs: &exe-defaults
   source-dirs: app
   other-modules: []
   dependencies: [hello-neighbor]
-  ghc-options: [-threaded, -rtsopts, -with-rtsopts=-N]
+  ghc-options: [-threaded, -O2, -rtsopts, -with-rtsopts=-N]
 
 executables:
   par:
