--- a/hello-neighbor.cabal
+++ b/hello-neighbor.cabal
@@ -44,6 +44,7 @@ library
     , bytestring >=0.11
     , containers >=0.6
     , heap ==1.0.4
+    , hspec >=0.9
     , parallel ==3.2.2.0
   default-language: Haskell2010
 
@@ -60,6 +61,7 @@ executable mpar
     , containers >=0.6
     , heap ==1.0.4
     , hello-neighbor
+    , hspec >=0.9
     , parallel ==3.2.2.0
   default-language: Haskell2010
 
@@ -76,6 +78,7 @@ executable mseq
     , containers >=0.6
     , heap ==1.0.4
     , hello-neighbor
+    , hspec >=0.9
     , parallel ==3.2.2.0
   default-language: Haskell2010
 
@@ -92,6 +95,7 @@ executable par
     , containers >=0.6
     , heap ==1.0.4
     , hello-neighbor
+    , hspec >=0.9
     , parallel ==3.2.2.0
   default-language: Haskell2010
 
@@ -108,6 +112,7 @@ executable seq
     , containers >=0.6
     , heap ==1.0.4
     , hello-neighbor
+    , hspec >=0.9
     , parallel ==3.2.2.0
   default-language: Haskell2010
 
@@ -129,5 +134,6 @@ test-suite hello-neighbor-test
     , containers >=0.6
     , heap ==1.0.4
     , hello-neighbor
+    , hspec >=0.9
     , parallel ==3.2.2.0
   default-language: Haskell2010
