--- a/package.yaml
+++ b/package.yaml
@@ -2,9 +2,9 @@ name:                hello-neighbor
 version:             0.1.0.0
 github:              "githubuser/hello-neighbor"
 license:             BSD-3-Clause
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2023 Author name here"
+author:              ["Kevin Jiang ", "Joshua Zhou", "Jeannie Ren"]
+maintainer:          "kevinfjiang@yahoo.com"
+copyright:           "2023 Kevin Jiang, Joshua Zhou, Jeannie Ren"
 
 extra-source-files:
 - README.md
